# ai-context-injector

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  HOW_TO_USE_HACKDARK_LEARNINGS.md  LEARNINGS_FROM_HACKDARK.md  LICENSE  README.md  REFERENCE.md  START_HERE.md  init.sh  pyproject.toml  pytest.ini
examples/: README.md
openspec/changes/cross-encoder-reranker/: README.md  design.md  proposal.md  tasks.md
openspec/changes/cross-encoder-reranker/specs/cross-encoder-reranker/: spec.md
openspec/changes/initial-release/: design.md  proposal.md  tasks.md
openspec/changes/initial-release/specs/context-formatter/: spec.md
openspec/changes/initial-release/specs/context-injector/: spec.md
openspec/changes/initial-release/specs/provider-interface/: spec.md
openspec/changes/initial-release/specs/tag-parser/: spec.md
openspec/changes/structured-chunking-and-metadata/: README.md  design.md  proposal.md  tasks.md
openspec/changes/structured-chunking-and-metadata/specs/chunking-strategies/: spec.md
openspec/changes/structured-chunking-and-metadata/specs/code-extraction/: spec.md
openspec/changes/structured-chunking-and-metadata/specs/metadata-filtering/: spec.md
src/ai_context_injector/: __init__.py  chunking.py  embeddings.py  extractors.py  indexing.py  py.typed  reranker.py
src/ai_context_injector/core/: __init__.py  formatter.py  injector.py  parser.py  types.py
src/ai_context_injector/providers/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_chunking.py  test_edge_cases.py  test_embeddings.py  test_integration.py  test_reranker.py
tests/core/: test_formatter.py  test_injector.py  test_parser.py  test_types.py
tests/providers/: test_base.py
